@@ -93,8 +93,6 @@ final class TermVectorsConsumer extends TermsHash {
   @Override
   void finishDocument() throws IOException {
 
-    assert docWriter.testPoint("TermVectorsTermsWriter.finishDocument start");
-
     if (!hasVectors) {
       return;
     }
@@ -119,7 +117,6 @@ final class TermVectorsConsumer extends TermsHash {
 
     super.reset();
     resetFields();
-    assert docWriter.testPoint("TermVectorsTermsWriter.finishDocument end");
   }
 
   @Override
