@@ -859,7 +859,7 @@ public class MockDirectoryWrapper extends BaseDirectoryWrapper {
               extras += "\n\nThese files we had previously tried to delete, but couldn't: " + pendingDeletions;
             }
              
-            assert false : "unreferenced files: before delete:\n    " + Arrays.toString(startFiles) + "\n  after delete:\n    " + Arrays.toString(endFiles) + extras;
+            throw new RuntimeException("unreferenced files: before delete:\n    " + Arrays.toString(startFiles) + "\n  after delete:\n    " + Arrays.toString(endFiles) + extras);
           }
 
           DirectoryReader ir1 = DirectoryReader.open(this);
